emfio/qa/cppunit/wmf/wmfimporttest.cxx
@@ -212,18 +212,18 @@ void WmfTest::testSetTextAlignWmf()
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[3]/text", "textalignment:0x00");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[4]", "align", "top");
-    assertXPath(pDoc, "/metafile/push[2]/textarray[4]", "x", "11999");
+    assertXPath(pDoc, "/metafile/push[2]/textarray[4]", "x", "12026");
     assertXPath(pDoc, "/metafile/push[2]/textarray[4]", "y", "423");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[4]/text", "textalignment:0x02");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[5]", "align", "top");
-    // Fails without the fix: Expected: 11999, Actual: 12350
-    assertXPath(pDoc, "/metafile/push[2]/textarray[5]", "x", "11999");
+    // Fails without the fix: Expected: 12026, Actual: 12350
+    assertXPath(pDoc, "/metafile/push[2]/textarray[5]", "x", "12026");
     assertXPath(pDoc, "/metafile/push[2]/textarray[5]", "y", "635");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[5]/text", "textalignment:0x04");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[6]", "align", "top");
-    assertXPath(pDoc, "/metafile/push[2]/textarray[6]", "x", "12350");
+    assertXPath(pDoc, "/metafile/push[2]/textarray[6]", "x", "12363");
     assertXPath(pDoc, "/metafile/push[2]/textarray[6]", "y", "847");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[6]/text", "textalignment:0x06");
 
@@ -233,18 +233,18 @@ void WmfTest::testSetTextAlignWmf()
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[7]/text", "textalignment:0x08");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[8]", "align", "top");
-    assertXPath(pDoc, "/metafile/push[2]/textarray[8]", "x", "11999");
+    assertXPath(pDoc, "/metafile/push[2]/textarray[8]", "x", "12026");
     assertXPath(pDoc, "/metafile/push[2]/textarray[8]", "y", "1270");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[8]/text", "textalignment:0x0A");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[9]", "align", "bottom");
-    // Fails without the fix: Expected: 11999, Actual: 12350
-    assertXPath(pDoc, "/metafile/push[2]/textarray[9]", "x", "11999");
+    // Fails without the fix: Expected: 12026, Actual: 12350
+    assertXPath(pDoc, "/metafile/push[2]/textarray[9]", "x", "12026");
     assertXPath(pDoc, "/metafile/push[2]/textarray[9]", "y", "1482");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[9]/text", "textalignment:0x0C");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[10]", "align", "bottom");
-    assertXPath(pDoc, "/metafile/push[2]/textarray[10]", "x", "12350");
+    assertXPath(pDoc, "/metafile/push[2]/textarray[10]", "x", "12363");
     assertXPath(pDoc, "/metafile/push[2]/textarray[10]", "y", "1693");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[10]/text", "textalignment:0x0E");
 
@@ -254,18 +254,18 @@ void WmfTest::testSetTextAlignWmf()
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[11]/text", "textalignment:0x10");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[12]", "align", "bottom");
-    assertXPath(pDoc, "/metafile/push[2]/textarray[12]", "x", "11999");
+    assertXPath(pDoc, "/metafile/push[2]/textarray[12]", "x", "12026");
     assertXPath(pDoc, "/metafile/push[2]/textarray[12]", "y", "2117");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[12]/text", "textalignment:0x12");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[13]", "align", "bottom");
-    // Fails without the fix: Expected: 11999, Actual: 12350
-    assertXPath(pDoc, "/metafile/push[2]/textarray[13]", "x", "11999");
+    // Fails without the fix: Expected: 12026, Actual: 12350
+    assertXPath(pDoc, "/metafile/push[2]/textarray[13]", "x", "12026");
     assertXPath(pDoc, "/metafile/push[2]/textarray[13]", "y", "2328");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[13]/text", "textalignment:0x14");
 
     assertXPath(pDoc, "/metafile/push[2]/textalign[14]", "align", "bottom");
-    assertXPath(pDoc, "/metafile/push[2]/textarray[14]", "x", "12350");
+    assertXPath(pDoc, "/metafile/push[2]/textarray[14]", "x", "12363");
     assertXPath(pDoc, "/metafile/push[2]/textarray[14]", "y", "2540");
     assertXPathContent(pDoc, "/metafile/push[2]/textarray[14]/text", "textalignment:0x16");
 
