svx/qa/unit/customshapes.cxx
@@ -441,10 +441,10 @@ CPPUNIT_TEST_FIXTURE(CustomshapesTest, testTdf145111_anchor_in_Fontwork)
         SdrObjCustomShape& rSdrCustomShape(
             static_cast<SdrObjCustomShape&>(*SdrObject::getSdrObjectFromXShape(xShape)));
 
-        // Without the fix in place top was 2295, but should be 2916 for 96dpi.
+        // Without the fix in place top was 2295, but should be 2908 for 96dpi.
         // Was 2184, should be 2886 for 120dpi.
         tools::Rectangle aBoundRect(rSdrCustomShape.GetCurrentBoundRect());
-        CPPUNIT_ASSERT_DOUBLES_EQUAL(tools::Long(2916), aBoundRect.Top(), 5);
+        CPPUNIT_ASSERT_DOUBLES_EQUAL(tools::Long(2908), aBoundRect.Top(), 5);
     }
     {
         // Second shape has anchor set to Bottom-Left, which shifts Fontwork text up.
@@ -452,10 +452,10 @@ CPPUNIT_TEST_FIXTURE(CustomshapesTest, testTdf145111_anchor_in_Fontwork)
         SdrObjCustomShape& rSdrCustomShape(
             static_cast<SdrObjCustomShape&>(*SdrObject::getSdrObjectFromXShape(xShape)));
 
-        // Without the fix in place top was 10294, but should be 9519 for 96dpi.
+        // Without the fix in place top was 10294, but should be 9508 for 96dpi.
         // Was 10184, should be 9481 for 120dpi.
         tools::Rectangle aBoundRect(rSdrCustomShape.GetCurrentBoundRect());
-        CPPUNIT_ASSERT_DOUBLES_EQUAL(tools::Long(9519), aBoundRect.Top(), 5);
+        CPPUNIT_ASSERT_DOUBLES_EQUAL(tools::Long(9508), aBoundRect.Top(), 5);
     }
 }
 
